package com.arcade.stadium.adapter.out.persistence;

import com.arcade.stadium.domain.model.UserWallet;
import org.springframework.data.repository.query.ReactiveQueryByExampleExecutor;
import org.springframework.data.repository.reactive.ReactiveCrudRepository;
import org.springframework.stereotype.Repository;
import reactor.core.publisher.Mono;

import java.util.UUID;

@Repository
public interface UserWalletRepository extends ReactiveCrudRepository<UserWallet, UUID>, ReactiveQueryByExampleExecutor<UserWallet> {
    Mono<UserWallet> findByPlayerId(UUID playerId);
}
