@startuml
skinparam style strictuml
title Domain Model - Arcade Platform Module

package "Core Domain" {
    class Player <<Entity>> {
        +String id
        +String gcpIapEmail
        +DateTime createdAt
    }

    class UserWallet <<Entity>> {
        +String id
        +String playerId
        +Integer dailyFreeCredit
        +Integer adminBonusCredit
        +DateTime lastDailyResetTime
    }

    class GameCard <<Entity>> {
        +String gameId
        +String title
        +String coverArtUrl
        +String description
        +Integer totalPlayCount
    }

    class LeaderboardEntry <<Entity>> {
        +String id
        +String gameId
        +String playerEmail
        +Integer score
        +DateTime submittedAt
    }

    class GameSummary <<ValueObject>> {
        +String gameId
        +String playerEmail
        +Integer finalScore
        +Integer maxCombo
        +Boolean isOneCoinClear
        +Integer playDurationSeconds
    }

    class ArcadeCabinet <<ValueObject>> {
        +String cabinetStyle
        +Boolean crtFilterEnabled
        +Decimal masterVolume
        +Boolean isMuted
    }
}

package "Persistence Contracts" {
    interface PlayerRepository <<Interface>> {
        +Create(Player data): Player
        +GetById(String id): Player
        +Update(String id, Player delta): Player
        +Delete(String id): Boolean
    }

    interface UserWalletRepository <<Interface>> {
        +Create(UserWallet data): UserWallet
        +GetById(String id): UserWallet
        +Update(String id, UserWallet delta): UserWallet
        +Delete(String id): Boolean
    }

    interface LeaderboardEntryRepository <<Interface>> {
        +Create(LeaderboardEntry data): LeaderboardEntry
        +GetById(String id): LeaderboardEntry
        +Update(String id, LeaderboardEntry delta): LeaderboardEntry
        +Delete(String id): Boolean
    }

    interface GameCardRepository <<Interface>> {
        +Create(GameCard data): GameCard
        +GetById(String id): GameCard
        +Update(String id, GameCard delta): GameCard
        +Delete(String id): Boolean
    }
}

' Relationships: Strong ownership and associations with explicit verb labels and multiplicity
Player "1" *-- "1" UserWallet : "owns wallet"
Player "1" o-- "*" LeaderboardEntry : "submits high scores"
Player "1" o-- "1" ArcadeCabinet : "configures settings"
GameCard "1" o-- "*" LeaderboardEntry : "tracks per-game high scores"
Player "1" o-- "*" GameSummary : "completes play sessions"

note right of Player : ID MUST be UUID v4. Email injected via GCP IAP Header (X-Goog-Authenticated-User-Email).
note right of UserWallet : dailyFreeCredit resets to 10 daily at 00:00 (non-accumulative).\nDeduction priority: dailyFreeCredit first, then adminBonusCredit.
note right of LeaderboardEntry : Stores high score submission per game.\nPer-game Top 10 Query: Filter by gameId, order by score DESC, tie-breaking by playerEmail ASC.
@enduml
